--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.400.0",
     "monaco-themes": "^0.4.4",
     "next": "14.2.4",
+    "next-pwa": "^5.6.0",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
