--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "monaco-themes": "^0.4.4",
     "next": "14.2.4",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
